--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.10",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.4.4",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
